Add mage field to model

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon server.js"
   },
   "repository": "https://github.com/morelmiles/ecom-interview-test.git",
-  "author": "Luigi Morel",
+  "author": "Luigi Morel <morelmiles@gmail.com>",
   "license": "MIT ",
   "private": true,
   "dependencies": {
